# coxit-parse-pdf-task

./: .dockerignore  .gitattributes  .gitignore  README.md  Taskfile.yml  docker-compose.yml
backend/: Dockerfile  __main__.py  app_factory.py  main.py  pyproject.toml  requirements.txt
backend/api/dependecies/: pdf_analyze.py
backend/api/routes/: history.py  pdf.py
backend/core/: config.py  settings.py
backend/db/mongo/: client.py  settings.py
backend/db/mongo/repositories/: repository.py
backend/docker/: backend.deps.dockerfile  backend.dockerfile
backend/docker/scripts/: download_nltk.sh
backend/llm/: factory.py  llm_service.py  prompts.py  settings.py
backend/schemas/: history.py  pdf.py
backend/services/: pdf_service.py  settings.py
backend/tests/: conftest.py  test_pdf_service.py  test_repository.py  test_routes.py
backend/use_cases/: pdf_analyzer_use_case.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: HistoryPage.tsx  UploadPage.tsx
frontend/src/types/: index.ts
scripts/: dev.sh  rebuild.sh  stop.sh
