[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-parser-backend"
version = "1.0.0"
authors = [
    { name = "Oleh Kyshko", email = "olegkr2007@gmail.com" },
]
description = "PDF Parser API – upload a PDF, get an LLM-powered summary"
readme = "README.md"
requires-python = ">=3.12, <3.14"
keywords = ["AI", "LLM", "PDF", "summary", "FastAPI"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi~=0.135",
    "uvicorn[standard]~=0.42",
    "pymongo~=4.16",
    "pydantic-settings~=2.13",
    "python-multipart~=0.0.22",
    # Document loading & chunking
    "unstructured[pdf]~=0.21",
    "langchain-core~=1.2",
    "langchain-community~=0.4",
    "langchain-text-splitters~=1.1",
]

[project.optional-dependencies]
openai = ["langchain-openai~=1.1", "openai~=2.0"]
groq  = ["langchain-groq~=1.1"]
lint  = ["ruff"]
test  = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/kesshich/coxit-test-task"

[tool.hatch.build.targets.wheel]

packages = []

[tool.ruff]
exclude = [
    ".git", ".venv", "__pycache__", "dist", "build",
    "node_modules", ".mypy_cache", ".ruff_cache",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F",   # Pyflakes & Pycodestyle
    "B",                      # bugbear
    "I",                      # isort
    "UP",                     # pyupgrade
    "T20",                    # disallow print statements
    "RUF100",                 # Ruff-specific
]
ignore = ["E501", "C901"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

